--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,7 +1,16 @@
-@import "normalize.scss";
-@import "mixins.scss";
-@import "variables.scss";
-@import "global.scss";
-@import "fonts.scss";
+// Helpers
+@import "helpers/variables";
+@import "helpers/mixins";
 
+// Vendor
+@import "vendor/normalize";
+
+// Common
+@import "common/global";
+@import "common/fonts";
+
+// Pages
+@import "pages//index";
+
+// Blocks
 @import "blocks/container.scss";
