--- a/source/sass/blocks/_container.scss
+++ b/source/sass/blocks/_container.scss
@@ -1,3 +1,13 @@
 .container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 320px;
 
+  @media(min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
