--- a/source/sass/blocks/_check.scss
+++ b/source/sass/blocks/_check.scss
@@ -1,18 +1,41 @@
 .check {
+  position: relative;
+  margin-top: 200px;
 
   &__title {
-
+    margin-top: 0;
+    margin-bottom: 25px;
+    text-align: center;
+    color: $white;
+    @include h2;
   }
 
   &__text {
-
+    max-width: 630px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+    padding-bottom: 220px;
+    text-align: center;
+    color: $white;
+    color: $grey-3;
+    @include txt-stnd-rglr;
   }
 
   &__calc {
-
+    position: absolute;
+    top: 180px;
+    left: 150px;
+    width: 945px;
+    background-color: $white;
+    border-radius: 15px;
+    box-shadow: 0px 10px 80px 0 rgba(57, 23, 119, 0.1);
   }
 
   &__revenue {
-
+    margin-right: 50px;
+    margin-bottom: 50px;
+    margin-left: 50px;
   }
 }
