--- a/source/sass/blocks/_cryptocurrencies.scss
+++ b/source/sass/blocks/_cryptocurrencies.scss
@@ -1,10 +1,22 @@
 .cryptocurrencies {
+  margin-top: 315px;
+  margin-bottom: 100px;
 
   &__title {
-
+    max-width: 750px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+    text-align: center;
+    color: $primary-color;
+    @include h2;
   }
 
   &__list {
-
+    display: flex;
+    justify-content: space-between;
+    margin-top: 65px;
+    list-style: none;
   }
 }
