--- a/source/sass/blocks/_footer.scss
+++ b/source/sass/blocks/_footer.scss
@@ -1,37 +1,59 @@
 .footer {
 
   &__logo {
-
-  }
-
-  &__list {
-
-    &--quick {
-
-    }
-
-    &--resources {
-
-    }
+    width: 135px;
+    height: 40px;
+    margin-top: 80px;
   }
 
   &-list {
+    margin-top: 80px;
+    list-style: none;
+
+    &--quick {
+      width: 200px;
+    }
+
+    &--resources {
+      width: 200px;
+    }
 
     &__title {
+      margin-top: 0;
+      color: $white;
+      @include txt-l-mdm;
 
     }
 
     &__item {
-
+      line-height: 38px;
     }
 
     &__link {
-
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 38px;
+      line-height: 38px;
+      color: $grey-4;
+      text-decoration: none;
+      @include txt-smll-rglr;
     }
   }
 
-  &__bottom {
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: top;
+    margin-bottom: 120px;
+  }
 
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 80px;
+    color: $white;
+    @include txt-smll-rglr;
   }
 
   &__copyright {
@@ -39,6 +61,9 @@
   }
 
   &__social-icons {
-
+    display: flex;
+    justify-content: space-between;
+    width: 250px;
+    height: 24px;
   }
 }
