--- a/source/sass/blocks/_header.scss
+++ b/source/sass/blocks/_header.scss
@@ -1,3 +1,16 @@
 .header {
+  position: relative;
+  margin-bottom: 50px;
 
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 60px;
+  }
+
+  &__right {
+    display: flex;
+    vertical-align: middle;
+  }
 }
