--- a/source/sass/blocks/_infrastructure.scss
+++ b/source/sass/blocks/_infrastructure.scss
@@ -1,10 +1,26 @@
 .infrastructure {
+  padding-top: 100px;
 
   &__title {
-
+    max-width: 760px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-bottom: 100px;
+    margin-left: auto;
+    text-align: center;
+    color: $white;
+    @include h2;
   }
 
   &__link {
-
+    padding: 16px 24px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 150%;
+    color: #fff;
+    text-decoration: none;
+    background-color: #3671e9;
+    border-radius: 50px;
   }
 }
