--- a/source/sass/blocks/_profit.scss
+++ b/source/sass/blocks/_profit.scss
@@ -1,15 +1,25 @@
 .profit {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 190px;
 
   &__text-block {
 
   }
 
   &__title {
-
+    margin-top: 0;
+    margin-bottom: 25px;
+    color: $white;
+    @include h3;
   }
 
   &__text {
-
+    max-width: 410px;
+    margin-top: 0;
+    margin-bottom: 42px;
+    color: $grey-3;
+    @include txt-smll-rglr;
   }
 
   &__link {
