--- a/source/sass/blocks/_rate-form.scss
+++ b/source/sass/blocks/_rate-form.scss
@@ -1,3 +1,9 @@
 .rate-form {
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+  margin-left: 50px;
 }
