--- a/source/sass/blocks/_stat.scss
+++ b/source/sass/blocks/_stat.scss
@@ -1,18 +1,28 @@
 .stat {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 120px;
 
   &__text-block {
-
+    margin-top: 105px;
   }
 
   &__title {
-
+    margin-top: 0;
+    margin-bottom: 25px;
+    color: $white;
+    @include h3;
   }
 
   &__text {
-
+    max-width: 410px;
+    margin-top: 0;
+    margin-bottom: 40px;
+    color: $grey-3;
+    @include txt-smll-rglr;
   }
 
   &__link {
-    
+
   }
 }
