--- a/source/sass/blocks/_nav.scss
+++ b/source/sass/blocks/_nav.scss
@@ -21,3 +21,13 @@
     @include txt-smll-rglr;
   }
 }
+
+.header__right--active {
+  .nav__list {
+    display: block;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    line-height: 50px;
+  }
+}
