--- a/source/sass/blocks/_container.scss
+++ b/source/sass/blocks/_container.scss
@@ -2,6 +2,7 @@
   max-width: 320px;
   margin-right: auto;
   margin-left: auto;
+  padding: 0 10px;
 
   @media(min-width: 768px) {
     max-width: 768px;
@@ -9,5 +10,6 @@
 
   @media (min-width: 1200px) {
     max-width: 1200px;
+    padding: 0;
   }
 }
