--- a/source/sass/blocks/_cryptocurrencies.scss
+++ b/source/sass/blocks/_cryptocurrencies.scss
@@ -1,6 +1,11 @@
 .cryptocurrencies {
-  margin-top: 315px;
-  margin-bottom: 100px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+
+
+  @media(min-width: 1200px) {
+    margin-top: 450px;
+  }
 
   &__title {
     max-width: 750px;
@@ -15,8 +20,17 @@
 
   &__list {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    height: 1500px;
     margin-top: 65px;
+    padding-left: 0;
     list-style: none;
+
+    @media(min-width: 1200px){
+      flex-direction: row;
+      height: auto;
+    }
   }
 }
