--- a/source/sass/blocks/_rate-form.scss
+++ b/source/sass/blocks/_rate-form.scss
@@ -1,9 +1,17 @@
 .rate-form {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin-top: 50px;
+  height: 200px;
+
   margin-right: 50px;
   margin-bottom: 50px;
   margin-left: 50px;
+  text-align: center;
+
+  @media (min-width: 1200px){
+    flex-direction: row;
+    margin-top: 50px;
+  }
 }
