--- a/source/sass/blocks/_subscribe.scss
+++ b/source/sass/blocks/_subscribe.scss
@@ -1,6 +1,7 @@
 .subscribe {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   background-color: #3671E9;
@@ -46,6 +47,7 @@
     display: flex;
     justify-content: space-between;
     width: 570px;
+    flex-wrap: wrap;
 
     &__input {
       width: 375px;
