--- a/source/sass/blocks/_why.scss
+++ b/source/sass/blocks/_why.scss
@@ -2,6 +2,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column-reverse;
+
+  @media(min-width: 1200px){
+    flex-direction: row;
+  }
+
+  &__img {
+    width: 300px;
+    height: auto;
+
+    @media (min-width: 1200px){
+      width: auto;
+      height: auto;
+    }
+  }
 
   &__text-block {
 
