--- a/source/sass/blocks/_achievements.scss
+++ b/source/sass/blocks/_achievements.scss
@@ -1,15 +1,29 @@
 .achievements {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   margin-bottom: 100px;
+
+
+  @media(min-width: 1200px) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+  }
 
   &__item {
     position: relative;
+    width: 210px;
+    margin-right: auto;
+    margin-left: auto;
     padding-bottom: 50px;
     padding-left: 104px;
 
-    @media(min-width: 1024px){
+    @media(min-width: 1200px){
+      width: auto;
+      margin-right: 0;
+      margin-left: 0;
       padding-bottom: 0;
     }
 
