--- a/source/sass/blocks/_achievement.scss
+++ b/source/sass/blocks/_achievement.scss
@@ -7,9 +7,14 @@
   }
 
   &__description {
+    max-width: 200px;
     margin-top: 0;
     margin-bottom: 0;
     color: $white;
     @include txt-smll-rglr;
+
+    @media(min-width: 1200px){
+      max-width: none;
+    }
   }
 }
