--- a/source/sass/blocks/_cryptocurrencies.scss
+++ b/source/sass/blocks/_cryptocurrencies.scss
@@ -8,14 +8,21 @@
   }
 
   &__title {
-    max-width: 750px;
     margin-top: 0;
     margin-right: auto;
     margin-bottom: 0;
     margin-left: auto;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 150%;
     text-align: center;
     color: $primary-color;
-    @include h2;
+
+
+    @media(min-width: 1200px){
+      max-width: 750px;
+      @include h2;
+    }
   }
 
   &__list {
