--- a/source/sass/blocks/_invest.scss
+++ b/source/sass/blocks/_invest.scss
@@ -6,6 +6,11 @@
 
   &__text-block {
     margin-top: 40px;
+    margin-bottom: 70px;
+
+    @media (min-width: 1200px){
+      margin-bottom: 0;
+    }
   }
 
   &__title {
