--- a/source/sass/blocks/_why.scss
+++ b/source/sass/blocks/_why.scss
@@ -1,8 +1,8 @@
 .why {
   display: flex;
+  flex-direction: column-reverse;
   justify-content: space-between;
   align-items: center;
-  flex-direction: column-reverse;
 
   @media(min-width: 1200px){
     flex-direction: row;
@@ -11,10 +11,12 @@
   &__img {
     width: 300px;
     height: auto;
+    margin-top: 50px;
 
     @media (min-width: 1200px){
       width: auto;
       height: auto;
+      margin-top: 0;
     }
   }
 
