:hover and :active

--- a/source/sass/blocks/_calc.scss
+++ b/source/sass/blocks/_calc.scss
@@ -52,5 +52,14 @@
     border: none;
     border-radius: 50px;
     @include txt-stnd-mdm;
+
+    &:hover {
+      background-color: #598EFB;
+    }
+
+    &:active {
+      color: $grey-3;
+      background-color: #1F5BD4;
+    }
   }
 }
