--- a/source/sass/blocks/_nav.scss
+++ b/source/sass/blocks/_nav.scss
@@ -16,9 +16,18 @@
   }
 
   &__link {
+    position: relative;
     color: $white;
     text-decoration: none;
     @include txt-smll-rglr;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &:active {
+      color: $grey-3;
+    }
   }
 }
 
