--- a/source/sass/blocks/_crypto.scss
+++ b/source/sass/blocks/_crypto.scss
@@ -45,10 +45,19 @@
     border-radius: 50px;
     @include txt-stnd-mdm;
 
+    &:hover {
+      background-color: #598EFB;
+    }
+
+    &:active {
+      color: $grey-3;
+      background-color: #1F5BD4;
+    }
+
     &::after {
-      content: url("../../img/icons/icon-arrow-right.svg");
+      content: url("../img/icons/icon-arrow-right.svg");
       position: absolute;
-      top: 15px;
+      top: 13px;
       right: 24px;
       width: 32px;
       height: 32px;
