--- a/source/sass/blocks/_login.scss
+++ b/source/sass/blocks/_login.scss
@@ -14,6 +14,15 @@
     background-color: $accent-color;
     border-radius: 50px;
     @include txt-smll-mdm;
+
+    &:hover {
+      background-color: #598EFB;
+    }
+
+    &:active {
+      color: $grey-3;
+      background-color: #1F5BD4;
+    }
   }
 }
 
